# Cpp-Inside-Python

./: README.md  cpp-vs-numpy.py  pyproject.toml  setup.py
src/ql_package/: __init__.py  ql_std.cpp  ql_std_jit.py
